--- a/app/assets/stylesheets/binda/components/sortable.scss
+++ b/app/assets/stylesheets/binda/components/sortable.scss
@@ -16,6 +16,7 @@ ul#sortable
     transition: box-shadow .3s ease, transform .3s ease;
     box-shadow: 0 0 0 0 rgba(0,0,0,.25);
 
+
     img
     {
       width: auto;
@@ -74,8 +75,6 @@ tbody.sortable
   tr
   {
     transition: box-shadow .3s ease, transform .3s ease;
-    margin-bottom: 8px;
-    padding-bottom: 8px;
 
     img
     {
